<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name_field"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <EditText
        android:id="@+id/register_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name_field"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="@+id/register_firstname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_firstname"
        app:layout_constraintTop_toBottomOf="@+id/register_firstname"
        app:layout_constraintVertical_bias="0.131" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_field"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="@+id/register_firstname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_firstname"
        app:layout_constraintTop_toBottomOf="@+id/register_firstname"
        app:layout_constraintVertical_bias="0.835" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_confirm_password"
        app:layout_constraintEnd_toEndOf="@+id/register_lastname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_lastname"
        app:layout_constraintTop_toBottomOf="@+id/register_firstname"
        app:layout_constraintVertical_bias="0.918" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_confirmation"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_password"
        app:layout_constraintTop_toBottomOf="@+id/register_firstname"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/submit_register"
        android:layout_width="269dp"
        android:layout_height="61dp"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password"
        app:layout_constraintVertical_bias="0.239" />
</androidx.constraintlayout.widget.ConstraintLayout>