<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/booking"
        android:textColor="#3E58DD"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_marginTop="29dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:padding="25dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/booking_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/start_date_field"
            android:inputType="date" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/booking_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/end_date_field"
            android:inputType="date" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/submit_booking"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/submit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>